Convert existing chips into checkboxes for selecting new filters

--- a/public/viz.html
+++ b/public/viz.html
@@ -544,10 +544,10 @@ function refreshCCISummaryChordPlots() {
                       </div>
                       <div class="divider filter-divider"></div>
                       <label id="filter-by-gene-pair">
-                        <input type="checkbox" class="filled-in" name="genepairfilter" id="genepairfilter" onchange="toggleFilterVisibility(this)"/>
+                        <input type="checkbox" class="filled-in" name="genepairfilter" id="genepairfilter" checked onchange="toggleFilterVisibility(this)"/>
                         <span class="outer-filter-nest">By Gene Pair</span>
                       </label>
-                      <div class="filter-layer-two" id="genepairfilter-select" hidden>
+                      <div class="filter-layer-two" id="genepairfilter-select">
                         <div class="input-field">
                           <input type="text" id="cci_search_interaction_input" placeholder="Gene Pair">
                         </div>
